--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           </div>
         </div>
       </form>
-      <br />
       <div class="row">
         <div class="col-5">
           <h1>Washington, DC</h1>
@@ -91,7 +90,92 @@
           </div>
         </div>
       </div>
-      <div id="forecast"></div>
+      <div class=" forecast" id="forecast">
+        <span class="col-2">
+          <div class="forecast-day">Mon</div>
+          <img
+            src="https://openweathermap.org/img/wn/01d@2x.png"
+            alt=""
+            id="weather-icon"
+            width="55"
+            class="weather-icon"
+          />
+          <div class="forecast-temperatures">
+            <span class="forecast-temperature-max">98°F</span>
+            <div class="forecast-temperature-min">71°F</div>
+          </div>
+        </span>
+        <span class="col-2">
+          <div class="forecast-day">Tue</div>
+          <img
+            src="https://openweathermap.org/img/wn/09d@2x.png"
+            alt=""
+            id="weather-icon"
+            width="55"
+            class="weather-icon"
+          />
+          <div class="forecast-temperatures">
+            <span class="forecast-temperature-max">89°F</span>
+            <div class="forecast-temperature-min">62°F</div>
+          </div>
+        </span>
+        <span class="col-2">
+          <div class="forecast-day">Wed</div>
+          <img
+            src="https://openweathermap.org/img/wn/11d@2x.png"
+            alt=""
+            id="weather-icon"
+            width="55"
+            class="weather-icon"
+          />
+          <div class="forecast-temperatures">
+            <span class="forecast-temperature-max">85°F</span>
+            <div class="forecast-temperature-min">61°F</div>
+          </div>
+        </span>
+        <span class="col-2">
+          <div class="forecast-day">Thu</div>
+          <img
+            src="https://openweathermap.org/img/wn/01d@2x.png"
+            alt=""
+            id="weather-icon"
+            width="55"
+            class="weather-icon"
+          />
+          <div class="forecast-temperatures">
+            <span class="forecast-temperature-max">82°F</span>
+            <div class="forecast-temperature-min">61°F</div>
+          </div>
+        </span>
+        <span class="col-2">
+          <div class="forecast-day">Fri</div>
+          <img
+            src="https://openweathermap.org/img/wn/02d@2x.png"
+            alt=""
+            id="weather-icon"
+            width="55"
+            class="weather-icon"
+          />
+          <div class="forecast-temperatures">
+            <span class="forecast-temperature-max">84°F</span>
+            <div class="forecast-temperature-min">65°F</div>
+          </div>
+        </span>
+        <span class="col-2">
+          <div class="forecast-day">Sat</div>
+          <img
+            src="https://openweathermap.org/img/wn/01d@2x.png"
+            alt=""
+            id="weather-icon"
+            width="55"
+            class="weather-icon"
+          />
+          <div class="forecast-temperatures">
+            <span class="forecast-temperature-max">82°F</span>
+            <div class="forecast-temperature-min">59°F</div>
+          </span>
+        </div>
+      </div>
     </div>
     <div class="link-text">
       <a
