--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <div class="container largest border border-primary border-4 m-4 p-4">
+    <div class="container largest border border-4 m-4 p-4">
       <form id="search-form" class="mb-3">
         <div class="row">
           <div class="col-9">
             <input
               type="search"
               placeholder="City Name"
-              class="form-control"
+              class="form-control search-bar"
               id="city-input"
             />
           </div>
           <div class="col-3">
-            <input type="submit" value="Search" class="btn btn-primary w-100" />
+            <input type="submit" value="Search" class="btn w-100" />
           </div>
         </div>
       </form>
